cabal-version:  3.0
name:           stm-loader
version:        0.1.0.0
category:       Web
homepage:       https://example.com/
author:         Gary Haussmann
maintainer:     gjhaussmann@gmail.com
copyright:      2020 Gary Haussmann
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

common deps
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       text,
                       stm,
                       async-pool,
                       containers,
                       distributive,
                       recursion-schemes,
                       generics-sop,
                       row-types,
                       freer-simple,
                       zorja

library
  import:              deps
  exposed-modules:     Lib, LoadUnload
  hs-source-dirs:      src

executable example
  import:              deps
  main-is:             Main.hs
  other-modules:       Lib, LoadUnload
  build-depends:
  hs-source-dirs:      src, app
  ghc-options:         -threaded -rtsopts



test-suite stm-test
  import:              deps
  build-depends:       hedgehog, hedgehog-corpus, graphviz
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test, src
  other-modules:       Lib,
                       LoadUnload,
                       Generators,
                       StateMachine
  ghc-options:         -threaded -rtsopts